--- a/app/src/main/res/layout/choose_theme.xml
+++ b/app/src/main/res/layout/choose_theme.xml
@@ -8,8 +8,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:entries="@array/themes"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_list"
-        />
-
+        tools:listitem="@layout/item_list" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
