--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -8,32 +8,73 @@
     android:layout_marginVertical="15dp"
     android:layout_marginBottom="15dp">
 
-    <TextView
-        android:id="@+id/title_tv"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:layout_marginTop="15dp"
+        android:orientation="vertical"
         android:layout_marginStart="15dp"
-        android:text="@string/dialog_title"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp">
 
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/title_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_marginVertical="15dp"
 
-    <TextView
-        android:id="@+id/description_tv"
-        android:layout_width="378dp"
-        android:layout_height="126dp"
+            android:text="@string/dialog_title"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
-        android:layout_gravity="top"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
-        android:text="@string/dialog_description"
+        <TextView
+            android:id="@+id/description_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
 
-        android:textAlignment="viewStart"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textSize="15sp" />
+            android:text="@string/dialog_description"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/agreement_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:gravity="center"
+
+            android:text="@string/dialog_agreement"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_ok"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="15dp"
+                android:text="@string/dialogBtn_ok"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="25dp"/>
+            <Button
+                android:id="@+id/btn_cancel"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="15dp"
+                android:layout_marginStart="25dp"
+                android:layout_marginEnd="30dp"
+                android:text="@string/dialogBtn_cancel"/>
 
 
+        </LinearLayout>
+
+
+    </LinearLayout>
 </LinearLayout>
