--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -16,14 +16,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/themeNum_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:text="@string/theme_number"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+
         <TextView
             android:id="@+id/themeName_tv"
             android:layout_width="wrap_content"
@@ -33,6 +26,7 @@
             android:maxLines="1"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             tools:text="@string/theme_name"/>
+
         <TextView
             android:id="@+id/description_tv"
             android:layout_width="wrap_content"
@@ -42,7 +36,8 @@
             android:maxLines="5"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@android:color/black"
-            tools:text="@string/theme_description"/>
+            android:textSize="16sp"
+            tools:text="@string/theme_description" />
 
     </LinearLayout>
 
