--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -2,31 +2,55 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:layout_marginVertical="15dp"
-    android:layout_marginBottom="15dp">
+    android:layout_marginBottom="15dp"
+    android:gravity="right"
+    android:orientation="horizontal">
+
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="15dp"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/title_tv"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:layout_marginVertical="15dp"
+            android:orientation="horizontal">
 
-            android:text="@string/dialog_title"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            <TextView
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:id="@+id/title_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:layout_marginVertical="15dp"
+
+                android:text="@string/dialog_title"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <ImageButton
+                android:layout_width="43dp"
+                android:layout_height="37dp"
+                android:layout_gravity="top"
+                android:layout_marginVertical="15dp"
+
+                android:background="@color/white"
+                android:src="@drawable/close"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <TextView
             android:id="@+id/description_tv"
@@ -60,9 +84,10 @@
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="15dp"
-                android:text="@string/dialogBtn_ok"
                 android:layout_marginStart="30dp"
-                android:layout_marginEnd="25dp"/>
+                android:layout_marginEnd="25dp"
+                android:text="@string/dialogBtn_ok" />
+
             <Button
                 android:id="@+id/btn_cancel"
                 android:layout_width="100dp"
@@ -70,7 +95,7 @@
                 android:layout_marginVertical="15dp"
                 android:layout_marginStart="25dp"
                 android:layout_marginEnd="30dp"
-                android:text="@string/dialogBtn_cancel"/>
+                android:text="@string/dialogBtn_cancel" />
 
 
         </LinearLayout>
