--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,26 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#B1D7D2"
     tools:context=".MainActivity">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageButton
+        android:layout_width="42dp"
+        android:layout_height="37dp"
         android:layout_marginEnd="4dp"
+        android:layout_marginBottom="688dp"
         android:onClick="settingsClick"
         android:src="@drawable/settings"
-        app:backgroundTint="#FFFFFF"
+        app:backgroundTint="#B1D7D2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/btn_continue"
-        android:layout_width="312dp"
-        android:layout_height="59dp"
+        style="@style/MyButton"
         android:text="@string/btn_continue"
         android:onClick="continueClick"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -33,24 +33,19 @@
         android:id="@+id/btn_theme"
         android:text="@string/btn_theme"
         android:onClick="themeClick"
-        android:layout_width="312dp"
-        android:layout_height="59dp"
+        style="@style/MyButton"
         android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_continue" />
 
     <Button
+        style="@style/MyButton"
         android:id="@+id/btn_restart"
         android:onClick="restartClick"
         android:text="@string/btn_restart"
-        android:layout_width="312dp"
-        android:layout_height="59dp"
-
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_theme"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintVertical_bias="0.143" />
 
 
