--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -7,6 +7,7 @@
     android:layout_marginVertical="15dp"
     android:layout_marginBottom="15dp"
     android:gravity="right"
+    android:background="#B1D7D2"
     android:orientation="horizontal">
 
 
@@ -42,8 +43,7 @@
                 android:layout_height="37dp"
                 android:layout_gravity="top"
                 android:layout_marginVertical="15dp"
-
-                android:background="@color/white"
+                android:background="#B1D7D2"
                 android:src="@drawable/close"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -80,6 +80,7 @@
             android:orientation="horizontal">
 
             <Button
+                android:backgroundTint="#E5E2CA"
                 android:id="@+id/btn_ok"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
@@ -89,6 +90,7 @@
                 android:text="@string/dialogBtn_ok" />
 
             <Button
+                android:backgroundTint="#E5E2CA"
                 android:id="@+id/btn_cancel"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
