--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -8,6 +8,7 @@
     android:layout_marginVertical="4dp"
     android:layout_marginHorizontal="8dp"
     app:contentPadding="16dp"
+    android:backgroundTint="#E5E2CA"
     app:contentPaddingBottom="24sp"
     >
 
