--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MyProject" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.MyProject" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -13,4 +13,13 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="MyButton" parent="Widget.AppCompat.Button">
+        <item name="android:layout_width">312dp</item>
+        <item name="android:layout_height">59dp</item>
+        <item name="backgroundTint">#E5E2CA</item>
+        <item name="layout_constraintEnd_toEndOf">parent</item>
+
+    </style>
+
 </resources>
