--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_width="42dp"
         android:layout_height="37dp"
         android:layout_marginEnd="4dp"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginBottom="688dp"
         android:onClick="settingsClick"
         android:src="@drawable/settings"
@@ -22,7 +23,7 @@
         android:id="@+id/btn_continue"
         style="@style/MyButton"
         android:text="@string/btn_continue"
-        android:onClick="continueClick"
+        android:onClick="gameClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
