--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,43 +10,47 @@
     <ImageButton
         android:layout_width="42dp"
         android:layout_height="37dp"
-        android:layout_marginEnd="4dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="688dp"
-        android:onClick="settingsClick"
-        android:src="@drawable/settings"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:onClick="profileClick"
+        android:src="@drawable/statistics"
         app:backgroundTint="#B1D7D2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_continue"
         style="@style/MyButton"
-        android:text="@string/btn_continue"
+        android:fontFamily="@font/montserrat_medium"
         android:onClick="gameClick"
+        android:text="@string/btn_continue"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.622" />
 
     <Button
         android:id="@+id/btn_theme"
-        android:text="@string/btn_theme"
-        android:onClick="themeClick"
         style="@style/MyButton"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/montserrat_medium"
+        android:onClick="themeClick"
+        android:text="@string/btn_theme"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_continue" />
 
     <Button
-        style="@style/MyButton"
         android:id="@+id/btn_restart"
+        style="@style/MyButton"
+        android:fontFamily="@font/montserrat_medium"
         android:onClick="restartClick"
         android:text="@string/btn_restart"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_theme"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_theme"
         app:layout_constraintVertical_bias="0.143" />
 
 
