--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -25,18 +25,19 @@
             android:orientation="horizontal">
 
             <TextView
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
                 android:id="@+id/title_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
                 android:layout_marginVertical="15dp"
-
+                android:fontFamily="@font/montserrat_medium"
                 android:text="@string/dialog_title"
+
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
                 android:layout_width="43dp"
@@ -58,6 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
 
+            android:fontFamily="@font/montserrat_medium"
             android:text="@string/dialog_description"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textSize="15sp" />
@@ -67,8 +69,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:gravity="center"
+            android:fontFamily="@font/montserrat_medium"
 
+            android:gravity="center"
             android:text="@string/dialog_agreement"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textSize="15sp"
@@ -80,24 +83,28 @@
             android:orientation="horizontal">
 
             <Button
-                android:backgroundTint="#E5E2CA"
                 android:id="@+id/btn_ok"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="15dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="25dp"
-                android:text="@string/dialogBtn_ok" />
+                android:backgroundTint="#E5E2CA"
+                android:fontFamily="@font/montserrat_medium"
+                android:text="@string/dialogBtn_ok"
+                android:textStyle="bold" />
 
             <Button
-                android:backgroundTint="#E5E2CA"
                 android:id="@+id/btn_cancel"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="15dp"
                 android:layout_marginStart="25dp"
                 android:layout_marginEnd="30dp"
-                android:text="@string/dialogBtn_cancel" />
+                android:backgroundTint="#E5E2CA"
+                android:fontFamily="@font/montserrat_medium"
+                android:text="@string/dialogBtn_cancel"
+                android:textStyle="bold" />
 
 
         </LinearLayout>
