--- a/app/src/main/res/layout/word_list.xml
+++ b/app/src/main/res/layout/word_list.xml
@@ -23,13 +23,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
+            android:fontFamily="@font/montserrat_medium"
             android:maxLines="1"
+            android:padding="5sp"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:padding="5sp"
             tools:text="@string/word_English" />
 
         <TextView
@@ -37,14 +39,15 @@
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="5sp"
             android:ellipsize="end"
+            android:fontFamily="@font/montserrat_medium"
             android:maxLines="1"
+            android:padding="5sp"
             android:textAlignment="textEnd"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@android:color/black"
             android:textSize="16sp"
-            android:padding="5sp"
-            android:layout_marginEnd="5sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
