--- a/app/src/main/res/layout/game_activity.xml
+++ b/app/src/main/res/layout/game_activity.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#B1D7D2"
-    tools:context=".Gamectivity">
+    tools:context=".GameActivity">
 
     <FrameLayout
         android:id="@+id/container_start"
