--- a/app/src/main/res/layout/game_fragment_start.xml
+++ b/app/src/main/res/layout/game_fragment_start.xml
@@ -6,7 +6,7 @@
     android:background="#B1D7D2"
     tools:context=".GameFragment">
 
-    <TextView
+    \<TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -24,10 +24,10 @@
         android:layout_gravity="center_horizontal|center">
 
         <Button
-            android:layout_marginLeft="5dp"
-            android:layout_width="192dp"
+            android:layout_width="wrap_content"
             android:layout_height="65dp"
-
+            android:layout_marginStart="5dp"
+            android:layout_marginBottom="20dp"
             android:fontFamily="@font/montserrat_medium"
             android:onClick="engClick"
             android:text="@string/btn_eng"
@@ -45,7 +45,7 @@
             android:onClick="rusClick"
             android:text="@string/btn_rus"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textSize="16sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             android:theme="@style/MyButton"
             android:typeface="monospace" />
