some changes in designe (add theme for text and changes in theme for buttons + add gameActivity fragments)

--- a/app/src/main/res/layout/game_activity.xml
+++ b/app/src/main/res/layout/game_activity.xml
@@ -4,14 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:background="#B1D7D2"
     tools:context=".GameActivity">
 
     <FrameLayout
         android:id="@+id/container_start"
-        android:layout_height="500dp"
-        android:layout_width="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_gravity="center">
 
+
+    </FrameLayout>
 
 </LinearLayout>
