--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,37 +21,32 @@
     <Button
         android:id="@+id/btn_continue"
         style="@style/MyButton"
-        android:fontFamily="@font/montserrat_medium"
-        android:onClick="gameClick"
         android:text="@string/btn_continue"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.622" />
+        app:layout_constraintVertical_bias="0.622"
+        android:onClick="gameClick"/>
 
     <Button
         android:id="@+id/btn_theme"
         style="@style/MyButton"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/montserrat_medium"
-        android:onClick="themeClick"
         android:text="@string/btn_theme"
-        android:textStyle="bold"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_continue" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_continue"
+        android:onClick="themeClick"/>
 
     <Button
         android:id="@+id/btn_restart"
         style="@style/MyButton"
-        android:fontFamily="@font/montserrat_medium"
-        android:onClick="restartClick"
         android:text="@string/btn_restart"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_theme"
-        app:layout_constraintVertical_bias="0.143" />
+        app:layout_constraintVertical_bias="0.143"
+        android:onClick="restartClick"/>
 
 
 
