--- a/app/src/main/res/layout/game_fragment_start.xml
+++ b/app/src/main/res/layout/game_fragment_start.xml
@@ -4,17 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#B1D7D2"
-    tools:context=".GameFragment">
+    tools:context=".GameStartFragment">
 
-    \<TextView
+    <TextView
+        style="@style/MyText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:fontFamily="@font/montserrat_bold"
         android:text="@string/tv_choice"
-        android:textColor="@color/black"
         android:textSize="25sp"
-        android:textStyle="bold"
         android:layout_marginBottom="50dp"/>
 
     <LinearLayout
@@ -24,31 +22,25 @@
         android:layout_gravity="center_horizontal|center">
 
         <Button
+            android:id="@+id/eng_btn"
+            style="@style/MyButton"
             android:layout_width="wrap_content"
             android:layout_height="65dp"
             android:layout_marginStart="5dp"
             android:layout_marginBottom="20dp"
-            android:fontFamily="@font/montserrat_medium"
-            android:onClick="engClick"
             android:text="@string/btn_eng"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:theme="@style/MyButton"
-            android:typeface="normal" />
+            android:textSize="12sp"
+             />
 
         <Button
+            android:id="@+id/rus_btn"
+            style="@style/MyButton"
             android:layout_marginEnd="5dp"
             android:layout_width="192dp"
             android:layout_height="65dp"
-            android:fontFamily="@font/montserrat_medium"
-            android:onClick="rusClick"
             android:text="@string/btn_rus"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:theme="@style/MyButton"
-            android:typeface="monospace" />
+            android:textSize="13sp"
+             />
 
     </LinearLayout>
 </FrameLayout>
