--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,6 +19,15 @@
         <item name="android:layout_height">59dp</item>
         <item name="backgroundTint">#E5E2CA</item>
         <item name="layout_constraintEnd_toEndOf">parent</item>
+        <item name="fontFamily">@font/montserrat_medium</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    
+    <style name="MyText">
+        <item name="fontFamily">@font/montserrat_bold</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">bold</item>
 
     </style>
 
