--- a/app/src/main/res/layout/game_fragment.xml
+++ b/app/src/main/res/layout/game_fragment.xml
@@ -6,24 +6,106 @@
     android:background="#B1D7D2"
     tools:context=".GameFragment">
 
+
     <TextView
+        android:id="@+id/time_counter_tv"
+        style="@style/MyText"
+        android:textSize="25sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center|top"
+        android:layout_gravity="center"
+        android:layout_marginBottom="150dp"
         android:text="@string/time_counter_tv" />
 
-    <TextView
+
+    <androidx.cardview.widget.CardView
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|left"
+        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="11dp"
+        android:padding="2dp"
+        android:backgroundTint="#E5E2CA">
+
+        <ImageView
+            android:id="@+id/tick_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginRight="15dp"
+            android:src="@drawable/tick"
+             />
+
+        <ImageView
+            android:id="@+id/cross_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginRight="15dp"
+            android:src="@drawable/close"
+             />
+
+        <TextView
+            android:id="@+id/word_tv"
+            style="@style/MyText"
+            android:textSize="15sp"
+            android:layout_gravity="left"
+            android:layout_margin="15dp"
+            android:layout_width="158dp"
+            android:layout_height="wrap_content"
+            android:text="@string/word_English" />
+
+
+        <EditText
+            android:id="@+id/translate_et"
+            style="@style/MyText"
+            android:inputType="text"
+            android:layout_gravity="right"
+            android:textSize="15sp"
+            android:layout_margin="5dp"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/enter_translate_et"/>
+    </androidx.cardview.widget.CardView>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:layout_marginTop="70dp">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/answer_btn"
+            style="@style/MyButton"
+            android:textSize="12sp"
+            android:text="@string/check_answer_btn"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="50dp"
+            android:layout_width="120dp"
+            android:layout_height="50dp"
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/MyButton" />
+         />
+
+        <Button
+            android:id="@+id/skip_btn"
+            style="@style/MyButton"
+            android:textSize="12sp"
+            android:text="@string/skip_answer_btn"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="50dp"
+            android:layout_width="120dp"
+            android:layout_height="50dp"
+
+            />
+
+
+    </LinearLayout>
+
+
+
+
 
 </FrameLayout>
