--- a/app/src/main/res/layout/game_result_fragment.xml
+++ b/app/src/main/res/layout/game_result_fragment.xml
@@ -29,7 +29,7 @@
             android:id="@+id/right_counter_tv"
             style="@style/MyText"
             android:textSize="20sp"
-            android:text=""
+            android:text="0"
             android:layout_gravity="top"
             android:layout_marginTop="150dp"
             android:layout_marginLeft="20dp"
@@ -61,7 +61,7 @@
             android:id="@+id/wrong_counter_tv"
             style="@style/MyText"
             android:textSize="20sp"
-            android:text=""
+            android:text="0"
             android:layout_gravity="top"
             android:layout_marginTop="200dp"
             android:layout_marginLeft="20dp"
@@ -89,7 +89,7 @@
             android:id="@+id/total_counter_tv"
             style="@style/MyText"
             android:textSize="20sp"
-            android:text=""
+            android:text="0"
             android:layout_gravity="top"
             android:layout_marginTop="250dp"
             android:layout_marginLeft="20dp"
