--- a/app/src/main/res/layout/game_activity.xml
+++ b/app/src/main/res/layout/game_activity.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
 
     android:background="#B1D7D2"
-    tools:context=".GameActivity">
+    tools:context=".activities.GameActivity">
 
     <FrameLayout
         android:id="@+id/container_start"
