--- a/app/src/main/res/layout/game_text_fragment.xml
+++ b/app/src/main/res/layout/game_text_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#B1D7D2"
-    tools:context=".GameTextFragment">
+    tools:context=".fragments.GameTextFragment">
 
 
     <LinearLayout
