--- a/app/src/main/res/layout/firstentrance_activity.xml
+++ b/app/src/main/res/layout/firstentrance_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -38,12 +38,12 @@
         style="@style/MyText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/userNickName_tv"
-        android:layout_marginTop="30dp"
         android:layout_marginStart="40dp"
+        android:text="@string/userNickName_tv"
         android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="241dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/userNickName_et"
@@ -51,10 +51,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:textSize="20sp"
         android:hint="Введите никнейм"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/userNickName_tv"
-        tools:layout_editor_absoluteY="241dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/userName_tv"
@@ -84,17 +85,19 @@
 
     <Button
         android:id="@+id/button"
-        style="@style/MyButton"
+        android:backgroundTint="#E5E2CA"
+        android:fontFamily="@font/montserrat_medium"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="confirmClick"
         android:text="@string/dialogBtn_ok"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userName_et"
-        app:layout_constraintVertical_bias="0.279"
-        android:onClick="confirmClick"/>
+        app:layout_constraintVertical_bias="0.279" />
 
 
-</androidx.constraintlayout.motion.widget.MotionLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
