--- a/app/src/main/res/layout/choose_theme.xml
+++ b/app/src/main/res/layout/choose_theme.xml
@@ -15,4 +15,12 @@
         tools:listitem="@layout/item_list"
         />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:onClick="addWord"
+        android:backgroundTint="#FF008577"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/add"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
