--- a/app/src/main/res/layout/choose_theme.xml
+++ b/app/src/main/res/layout/choose_theme.xml
@@ -12,15 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_list"
-        />
+        tools:listitem="@layout/item_list" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:onClick="addWord"
+        android:onClick="addTheme"
         android:backgroundTint="#FF008577"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/add"
         android:layout_gravity="bottom|right"
-        android:layout_margin="16dp"/>
+        android:layout_margin="16dp"
+        android:contentDescription="+" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
