--- a/app/src/main/res/layout/theme_activity.xml
+++ b/app/src/main/res/layout/theme_activity.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#B1D7D2"
+    android:background="@color/primary"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
