--- a/app/src/main/res/layout/word_activity.xml
+++ b/app/src/main/res/layout/word_activity.xml
@@ -3,12 +3,24 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#B1D7D2"
+    android:background="@color/primary"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/teal_700"
+        app:navigationIcon="?attr/homeAsUpIndicator"
+        app:title="@string/theme_name"
+        style="@style/MyText"
+        app:titleTextColor="@color/secondary">
+
+    </androidx.appcompat.widget.Toolbar>
+
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="?attr/actionBarSize"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:id="@+id/recycler_words"
