--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -34,7 +34,7 @@
     </style>
 
     <style name="InputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
-        <item name="boxStrokeColor">#fff</item>
+        <item name="boxStrokeColor">@color/teal_700</item>
         <item name="boxStrokeWidth">2dp</item>
     </style>
 
