--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,13 +2,12 @@
 <resources>
     <color name="primary">#B1D7D2</color>
     <color name="secondary">#E5E2CA</color>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="teal_200">#7ebeb5</color>
+    <color name="teal_500">#008171</color>
+    <color name="teal_700">#006656</color>
+    <color name="teal_800">#005648</color>
+    <color name="teal_900">#003b2e</color>
     <color name="teal_2">#FF008577</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="background_blue">#B1D7D2</color>
 </resources>
