--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,14 +4,14 @@
 
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/teal_700</item>
-        <item name="colorPrimaryVariant">@color/background_blue</item>
+        <item name="colorPrimaryVariant">@color/primary</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_700</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">#E5E2CA</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" >@color/teal_700</item>
+        <item name="android:statusBarColor" >@color/teal_800</item>
         <!-- Customize your theme here. -->
 
     </style>
@@ -19,7 +19,7 @@
     <style name="MyButton" parent="Widget.AppCompat.Button">
         <item name="android:layout_width">312dp</item>
         <item name="android:layout_height">59dp</item>
-        <item name="backgroundTint">#E5E2CA</item>
+        <item name="backgroundTint">@color/secondary</item>
         <item name="layout_constraintEnd_toEndOf">parent</item>
         <item name="fontFamily">@font/montserrat_medium</item>
         <item name="android:textColor">@color/black</item>
@@ -36,11 +36,6 @@
     <style name="InputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
         <item name="boxStrokeColor">@color/teal_700</item>
         <item name="boxStrokeWidth">2dp</item>
-    </style>
-
-    <style name="Theme.MyProject.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
     </style>
 
     <style name="Theme.MyApplicationTet.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
